--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learn node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "Agwa",
   "license": "ISC",
